--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ language: c
 compiler:
   - clang
   - gcc
-script: "aclocal && autoconf && automake --add-missing -v && ./configure && make"
+script: "aclocal && autoconf && automake --add-missing -v && ./configure && make && make && gcov --directory ."
 after_success:
   - bash <(curl -s https://codecov.io/bash)
